# user-management-ms

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  Makefile  README.md  buf.gen.yaml  docker-compose.yml  package-lock.json  package.json  setup.py
.github/workflows/: build-protos.yaml  build-python.yaml  pr-tests.yaml  release-please.yaml
.sqlx/: query-217376491881ad2566f11b6b587b183d2175767fc1c52b2642b831802237d032.json  query-5ff67a7ed4112bf70abcf32bc1d2a607f69ad9e76330856eae951f796278101d.json  query-74ebef4389187c978095e02d8c1d2c353e4a704efa08c6c38914b8e5514981ac.json  query-a7da26ab1348cd70027e19dc9e49edc9a1d82133343b144a642d93029a0ae1d4.json  query-b082a4ec36c917b40e0a9a14bfd7fdc5392e70b837861b4515647f9f4e0a3f63.json  query-fd58c1aa4955b08ba0a7984987ced6cc22d867e26788584b9b073c1d1f43e8af.json
deployments/scripts/: entrypoint.sh
libs/tonic-error/: Cargo.toml
libs/tonic-error/src/: lib.rs
libs/tonic-error/tonic-error-impl/: Cargo.toml
libs/tonic-error/tonic-error-impl/src/: lib.rs
migrations/: 20240611134727_create_user.sql  20240823183611_create_providers.sql
migrations/2024-04-22-151116_create_users/: up.sql
proto/auth/: auth.proto
scripts/: imports.sh
src/: config.rs  lib.rs  main.rs  schema.rs
src/database/: database.rs  mod.rs  pg_database.rs
src/errors/: errors.rs
src/gateways/: auth.rs
src/handlers/: generate_magic_link.rs  generate_otp.rs  logout.rs  refresh_token.rs  register.rs  validate_magic_link.rs  validate_otp.rs  validate_token.rs
src/models/: mails.rs  mod.rs  provider.rs  user.rs
src/repositories/: user_repository.rs
src/rpcs/: generate_magic_link.rs  generate_otp.rs  login.rs  logout.rs  mod.rs  refresh_token.rs  register.rs  validate_magic_link.rs  validate_otp.rs  validate_token.rs
src/server/: server.rs
src/services/: auth.rs  auth_service.rs
src/tests/: fixtures.rs  fixtures.yaml  integration.rs  mod.rs
src/validations/: mod.rs  validate_auth.rs
tests/: fixtures.rs  mod.rs
tests/rpcs/: integration.rs
