[package]
name = "user-management"
version = "0.1.0"
edition = "2021"

[dependencies]
tonic = { version = "0.10.2", features = ["tls"] }
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
prost = "0.12.4"
protos = { path = "./gen" }
diesel = { version = "2.1.6", features = ["postgres_backend", "postgres", "uuid", "r2d2"] }
dotenvy = "0.15.7"
uuid = "1.8.0"
jsonwebtoken = "9"
serde = { version = "1.0.198", features = ["derive"] }
chrono = "0.4.38"
totp-rs = {version = "5.5.1", features = ["otpauth"]}
validator = "0.18.1"
log = "0.4.21"
env_logger = "0.11.3"
redis = "0.25.3"
rand = "0.8.5"
base32 = "0.4.0"
autometrics = { version = "1.0.1", features = ["prometheus-exporter"] }
axum = { version = "0.7.5", features = ["tokio", "http1"]}
tower = "0.4.13"
tokio-stream = "0.1.15"
pbjson = "0.6.0"
diesel_migrations = "2.1.0"
futures-util = "0.3.30"

[build-dependencies]
tonic-build = "0.11.0"

[workspace]
members = [
    "gen"
]
