[package]
name = "user-service"
version = "1.1.2"
edition = "2021"

[[bin]]
name = "user-service"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.11.0", features = ["tls"] }
tokio = { version = "1.37.0", features = ["full"] }
prost = "0.13.1"
protos = { path = "./libs/gen" }
tonic-error = { path = "libs/tonic-error" }
dotenvy = "0.15.7"
uuid = "1.8.0"
jsonwebtoken = "9"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
chrono = "0.4.38"
totp-rs = {version = "5.5.1", features = ["otpauth"]}
validator = "0.18.1"
log = "0.4.21"
env_logger = "0.11.3"
redis = "0.26.1"
rand = "0.8.5"
base32 = "0.5.0"
autometrics = { version = "2.0.0", features = ["prometheus-exporter"] }
axum = { version = "0.7.5", features = ["tokio", "http1"]}
tower = "0.4.13"
tokio-stream = "0.1.15"
pbjson = "0.7.0"
futures-util = "0.3.30"
yaml-rust = "0.4.5"
tonic-reflection = "0.11.0"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio-native-tls", "uuid", "chrono"] }
deadpool-redis = "0.16.0"
thiserror = "1.0.59"
async-trait = "0.1.80"
quote = "1.0.36"
syn = "2.0.60"
serde_variant = "0.1.3"
base64 = "0.22.0"
sha2 = "0.10.8"
num-derive = "0.4.2"
num-traits = "0.2.19"

[build-dependencies]
tonic-build = "0.12.1"

[workspace]
members = [
    "libs/gen",
    "libs/tonic-error"
]
